--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# JavaScript
+js/auth.json
+js/node_modules
+
+# Clojure
+clj/.lein-env
+clj/.lein-failures
+clj/.nrepl-port
+clj/str
+clj/target
+
+# emacs
 *~
-auth.json
-node_modules
